--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,29 +1,33 @@
-main {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-    .aside {
-      width: calc(25% - 100px);
-      margin: 0 50px;
-    }
-    .main-grid {
-      width: calc(75% - 100px);
-      margin: 0 50px;
-    }
-}
+// main {
+//   display: flex;
+//   flex-direction: row;
+//   width: 100%;
+//   max-width: 1200px;
+//   margin: 0 auto;
+//     .aside {
+//       width: calc(25% - 100px);
+//       margin: 0 50px;
+//     }
+//     .main-grid {
+//       width: calc(75% - 100px);
+//       margin: 0 50px;
+//     }
+// }
 
 .light-container {
   border-radius: 50%;
   margin: 5px;
   padding: 5px;
   display: block;
-  background: #333;;
+  background: #333;
 }
 
 h1 {
   text-shadow: 0 0 25px white;
+}
+
+#purple {
+  background: #333;
 }
 
 .mobile {
@@ -53,8 +57,8 @@ h1 {
 }
 
 .orange {
-  background: darkorange;
-  box-shadow: 0 0 45px 1px darkorange;
+  background: #ff8300;
+  box-shadow: 0 0 50px 1px #ff8300;
 }
 
 .pink {
