--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,18 +1,3 @@
-// main {
-//   display: flex;
-//   flex-direction: row;
-//   width: 100%;
-//   max-width: 1200px;
-//   margin: 0 auto;
-//     .aside {
-//       width: calc(25% - 100px);
-//       margin: 0 50px;
-//     }
-//     .main-grid {
-//       width: calc(75% - 100px);
-//       margin: 0 50px;
-//     }
-// }
 
 .light-container {
   border-radius: 50%;
@@ -23,11 +8,16 @@
 }
 
 h1 {
-  text-shadow: 0 0 25px white;
-}
-
-#purple {
-  background: #333;
+  text-shadow: 0 0 5px blue, 0 0  5px hotpink;
+  padding: 20px;
+  color: hotpink;
+  font-family: "Sacramento", cursive;;
+  font-size: 4rem;
+  box-shadow: inset 0px 0px 4px 4px hotpink, inset 0 0 5px 5px blue;
+  font-style: italic;
+  text-align: center;
+  letter-spacing: 3px;
+  margin: 20px 0;
 }
 
 .mobile {
@@ -42,6 +32,11 @@ h1 {
     
 .mobile {
   display: none;
+}
+
+.fab {
+  color: white;
+  font-size: 1.2rem;
 }
 
 //colors
