--- a/styles/style.css
+++ b/styles/style.css
@@ -139,17 +139,19 @@ html {
   font-size: 125%;
   color: white; }
 
-.dark-theme {
-  background: black; }
+h1,
+a,
+p {
+  padding: 0;
+  margin: 0; }
 
-.light-theme {
-  background: white; }
+label:hover {
+  cursor: pointer; }
 
 .wrapper {
   max-width: 1200px;
   width: 100%;
-  margin: 0 auto;
-  border: 1px solid white; }
+  margin: 0 auto; }
 
 .flex-container-desktop {
   display: -webkit-box;
@@ -183,10 +185,17 @@ html {
   background: #333; }
 
 h1 {
-  text-shadow: 0 0 25px white; }
-
-#purple {
-  background: #333; }
+  text-shadow: 0 0 5px blue, 0 0  5px hotpink;
+  padding: 20px;
+  color: hotpink;
+  font-family: "Sacramento", cursive;
+  font-size: 4rem;
+  -webkit-box-shadow: inset 0px 0px 4px 4px hotpink, inset 0 0 5px 5px blue;
+  box-shadow: inset 0px 0px 4px 4px hotpink, inset 0 0 5px 5px blue;
+  font-style: italic;
+  text-align: center;
+  letter-spacing: 3px;
+  margin: 20px 0; }
 
 .mobile {
   width: 30px;
@@ -198,6 +207,10 @@ h1 {
 
 .mobile {
   display: none; }
+
+.fab {
+  color: white;
+  font-size: 1.2rem; }
 
 .yellow {
   background: yellow;
