--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,87 +1,80 @@
+main {
+  display: flex;
+  flex-direction: row;
+    .grid-options {
+      width: calc(25% - 50px);
+      margin-right: 50px;
+      flex-basis: auto;
+      align-self: center;
+    }
+    .main-grid {
+      width: calc(75% - 50px);
+      margin-left: 50px;
+      flex-basis: auto;
+    }
+}
+
+// grid-options styles 
+//color form styles stored in partials/color-form
+
+.grid-options {
+  border-right: 1px solid hotpink;
+  border-bottom: 1px solid hotpink;
+  padding: 0 20px 10px 0;
+  color: antiquewhite;
+    legend {
+      color: hotpink;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      margin: 0 auto;
+    }
+}
+
+button {
+  background: black;
+  color: antiquewhite;
+  border: 1px solid transparent;
+  padding: 5px 10px;
+  margin: 10px 0;
+    &:hover {
+      box-shadow: inset 0 0 0 4px $grey;
+    }
+}
+//main-grid styles
+.flex-container-desktop {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
 
 .light-container {
   border-radius: 50%;
   margin: 5px;
   padding: 5px;
   display: block;
-  background: #333;
+  background: $grey;
 }
 
-h1 {
-  text-shadow: 0 0 5px blue, 0 0  5px hotpink;
-  padding: 20px;
-  color: hotpink;
-  font-family: "Sacramento", cursive;;
-  font-size: 4rem;
-  box-shadow: inset 0px 0px 4px 4px hotpink, inset 0 0 5px 5px blue;
-  font-style: italic;
-  text-align: center;
-  letter-spacing: 3px;
-  margin: 20px 0;
-}
-
-.mobile {
-  width: 30px;
-  height: 30px;
-}
+//styles for the responsive light containers (anchor elements)
 
 .desktop {
   width: 25px;
   height: 25px;
 }
-    
+
+.mobile {
+  width: 35px;
+  height: 35px;
+}
+
 .mobile {
   display: none;
 }
-
-.fab {
-  color: white;
-  font-size: 1.2rem;
-}
-
-//colors
-
-.yellow {
-  background: yellow;
-  box-shadow: 0 0 40px 1px yellow;
-}    
-
-.red {
-  background: red;
-  box-shadow: 0 0 40px 1px red;
-}
-
-.orange {
-  background: #ff8300;
-  box-shadow: 0 0 50px 1px #ff8300;
-}
-
-.pink {
-  background: deeppink;
-  box-shadow: 0 0 40px 1px deeppink;
-}
-
-.purple {
-  background: mediumorchid;
-  box-shadow: 0 0 45px 1px mediumorchid;
-}
-
-.blue {
-  background: deepskyblue;
-  box-shadow: 0 0 40px 1px deepskyblue;
-}
-
-.green {
-  background: lawngreen;
-  box-shadow: 0 0 40px 1px lawngreen;
-}
-
-.white {
-  background: white;
-  box-shadow: 0 0 40px 1px white;
-}
-
-
 
 
 
