--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -1,3 +1,14 @@
+@media (max-width: 1150px) {
+  main {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  footer {
+    text-align: center;
+  }
+}
+
 @media (max-width: 500px) {
   .grid-desktop,
   .grid-desktop {
