--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,8 @@
 @import 'partials/setup';
 @import 'partials/global';
+@import 'partials/header';
 @import 'partials/main';
+@import 'partials/color-form';
+@import 'partials/colors';
+@import 'partials/footer';
 @import 'partials/mediaQueries';
