--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -4,13 +4,12 @@ main {
     .grid-options {
       width: calc(25% - 50px);
       margin-right: 50px;
-      flex-basis: auto;
       align-self: center;
     }
     .main-grid {
-      width: calc(75% - 50px);
-      margin-left: 50px;
-      flex-basis: auto;
+      width: 75%;
+      justify-content: center;
+      align-self: center;
     }
 }
 
@@ -35,16 +34,18 @@ button {
   color: antiquewhite;
   border: 1px solid transparent;
   padding: 5px 10px;
-  margin: 10px 0;
+  transition: 0.2s all ease-in;
     &:hover {
-      box-shadow: inset 0 0 0 4px $grey;
+      color: hotpink;
+      text-shadow: 0 0 1px hotpink;
     }
 }
 //main-grid styles
-.flex-container-desktop {
+.flex-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .flex-row {
@@ -60,21 +61,6 @@ button {
   background: $grey;
 }
 
-//styles for the responsive light containers (anchor elements)
-
-.desktop {
-  width: 25px;
-  height: 25px;
-}
-
-.mobile {
-  width: 35px;
-  height: 35px;
-}
-
-.mobile {
-  display: none;
-}
 
 
 
