--- a/styles/style.css
+++ b/styles/style.css
@@ -133,7 +133,9 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   box-sizing: border-box; }
 
 body {
-  background: black; }
+  background: black;
+  height: 100%;
+  width: 100%; }
 
 html {
   font-size: 125%;
@@ -146,7 +148,8 @@ a,
 p,
 button,
 form,
-fieldset {
+fieldset,
+ul {
   padding: 0;
   margin: 0; }
 
@@ -162,9 +165,37 @@ input[type="radio"] {
   width: 100%;
   margin: 0 auto; }
 
-.fab {
-  color: white;
-  font-size: 1.2rem; }
+.desktop {
+  width: 25px;
+  height: 25px; }
+
+.mobile {
+  width: 30px;
+  height: 30px;
+  display: none; }
+
+.flex-container-mobile {
+  display: none; }
+
+.social-link {
+  color: antiquewhite;
+  text-decoration: none;
+  -webkit-transition: 0.2s all ease-in;
+  -o-transition: 0.2s all ease-in;
+  transition: 0.2s all ease-in; }
+  .social-link .fab {
+    color: antiquewhite;
+    font-size: 1.2rem;
+    -webkit-transition: .3s all ease-in;
+    -o-transition: .3s all ease-in;
+    transition: .3s all ease-in; }
+  .social-link:hover {
+    color: hotpink;
+    text-shadow: 0 0 1px hotpink; }
+
+.social-link:hover > .fab {
+  color: hotpink;
+  text-shadow: 0 0 1px hotpink; }
 
 h1 {
   text-shadow: 0 0 5px blue, 0 0 5px hotpink;
@@ -188,16 +219,17 @@ main {
   main .grid-options {
     width: calc(25% - 50px);
     margin-right: 50px;
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center; }
   main .main-grid {
-    width: calc(75% - 50px);
-    margin-left: 50px;
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto; }
+    width: 75%;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center; }
 
 .grid-options {
   border-right: 1px solid hotpink;
@@ -215,12 +247,14 @@ button {
   color: antiquewhite;
   border: 1px solid transparent;
   padding: 5px 10px;
-  margin: 10px 0; }
+  -webkit-transition: 0.2s all ease-in;
+  -o-transition: 0.2s all ease-in;
+  transition: 0.2s all ease-in; }
   button:hover {
-    -webkit-box-shadow: inset 0 0 0 4px #333;
-    box-shadow: inset 0 0 0 4px #333; }
+    color: hotpink;
+    text-shadow: 0 0 1px hotpink; }
 
-.flex-container-desktop {
+.flex-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -230,7 +264,8 @@ button {
   flex-direction: column;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  width: 100%; }
 
 .flex-row {
   display: -webkit-box;
@@ -247,17 +282,6 @@ button {
   padding: 5px;
   display: block;
   background: #333; }
-
-.desktop {
-  width: 25px;
-  height: 25px; }
-
-.mobile {
-  width: 35px;
-  height: 35px; }
-
-.mobile {
-  display: none; }
 
 fieldset {
   border: none; }
@@ -286,13 +310,21 @@ fieldset {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
-  flex-direction: row; }
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 label {
   font-size: 1.4rem;
   letter-spacing: 4px;
   padding: 5px 0;
-  margin: 5px; }
+  margin: 5px;
+  -webkit-transition: 0.2s all ease-in;
+  -o-transition: 0.2s all ease-in;
+  transition: 0.2s all ease-in; }
 
 input:hover + label[for="yellow"],
 input:active + label[for="yellow"],
@@ -404,13 +436,61 @@ footer p {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center; }
+    main .grid-options {
+      width: 100%;
+      margin: 0;
+      padding: 0; }
+  .fieldset-flex-container,
+  .grid-options-extras {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: start;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  label,
+  button {
+    padding: 1px 5px; }
+  button,
+  ul {
+    margin: 10px 5px; }
   footer {
     text-align: center; } }
 
-@media (max-width: 500px) {
-  .grid-desktop,
-  .grid-desktop {
+@media (max-width: 810px) {
+  .remove {
+    display: none; } }
+
+@media (max-width: 700px) {
+  .desktop,
+  .flex-container {
     display: none; }
-  .grid-mobile,
+  .flex-container-mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%; }
   .mobile {
     display: block; } }
+
+@media (max-width: 520px) {
+  .remove-mobile {
+    display: none; } }
+
+@media (max-width: 450px) {
+  .mobile {
+    width: 40px;
+    height: 40px; } }
+
+@media (max-width: 400px) {
+  .remove-mobile-xs {
+    display: none; } }
+
+/*# sourceMappingURL=style.css.map */
