--- a/styles/partials/_color-form.scss
+++ b/styles/partials/_color-form.scss
@@ -1,20 +1,16 @@
+//styles for the labels and inputs
+
 fieldset {
   border: none;
 }
 
-.fieldset-flex-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  justify-content: space-between;
+label:hover {
+  cursor: pointer;
 }
 
-.grid-options-extras {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+input[type="radio"] {
+  opacity: 0;
+  position: absolute;
 }
 
 label {
