--- a/styles/style.css
+++ b/styles/style.css
@@ -133,15 +133,25 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   box-sizing: border-box; }
 
 body {
-  background: black;
-  height: 100%;
-  width: 100%; }
+  background-color: #000000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%239C92AC' fill-opacity='0.2' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E"); }
 
 html {
   font-size: 125%;
   color: white;
   font-family: "Indie Flower", cursive;
   line-height: 1.6; }
+
+.skip-link {
+  position: absolute;
+  left: -1000px;
+  top: 5px;
+  z-index: 999;
+  background: white;
+  color: black; }
+
+.skip-link:focus {
+  left: 0; }
 
 h1,
 a,
@@ -153,49 +163,10 @@ ul {
   padding: 0;
   margin: 0; }
 
-label:hover {
-  cursor: pointer; }
-
-input[type="radio"] {
-  opacity: 0;
-  position: absolute; }
-
 .wrapper {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto; }
-
-.desktop {
-  width: 25px;
-  height: 25px; }
-
-.mobile {
-  width: 30px;
-  height: 30px;
-  display: none; }
-
-.flex-container-mobile {
-  display: none; }
-
-.social-link {
-  color: antiquewhite;
-  text-decoration: none;
-  -webkit-transition: 0.2s all ease-in;
-  -o-transition: 0.2s all ease-in;
-  transition: 0.2s all ease-in; }
-  .social-link .fab {
-    color: antiquewhite;
-    font-size: 1.2rem;
-    -webkit-transition: .3s all ease-in;
-    -o-transition: .3s all ease-in;
-    transition: .3s all ease-in; }
-  .social-link:hover {
-    color: hotpink;
-    text-shadow: 0 0 1px hotpink; }
-
-.social-link:hover > .fab {
-  color: hotpink;
-  text-shadow: 0 0 1px hotpink; }
 
 h1 {
   text-shadow: 0 0 5px blue, 0 0 5px hotpink;
@@ -242,50 +213,6 @@ main {
     letter-spacing: 3px;
     margin: 0 auto; }
 
-button {
-  background: black;
-  color: antiquewhite;
-  border: 1px solid transparent;
-  padding: 5px 10px;
-  -webkit-transition: 0.2s all ease-in;
-  -o-transition: 0.2s all ease-in;
-  transition: 0.2s all ease-in; }
-  button:hover {
-    color: hotpink;
-    text-shadow: 0 0 1px hotpink; }
-
-.flex-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 100%; }
-
-.flex-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row; }
-
-.light-container {
-  border-radius: 50%;
-  margin: 5px;
-  padding: 5px;
-  display: block;
-  background: #333; }
-
-fieldset {
-  border: none; }
-
 .fieldset-flex-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -316,6 +243,58 @@ fieldset {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
+
+button {
+  background: transparent;
+  color: antiquewhite;
+  border: 1px solid transparent;
+  padding: 5px 10px;
+  margin: 10px 2px;
+  -webkit-transition: 0.2s all ease-in;
+  -o-transition: 0.2s all ease-in;
+  transition: 0.2s all ease-in; }
+  button:hover {
+    color: hotpink;
+    text-shadow: 0 0 1px hotpink;
+    border: 1px solid hotpink; }
+
+button:focus,
+button:active {
+  border: 1px solid hotpink; }
+
+ul {
+  list-style-type: none; }
+  ul li {
+    display: inline-block; }
+
+.social-link {
+  color: antiquewhite;
+  text-decoration: none;
+  -webkit-transition: 0.2s all ease-in;
+  -o-transition: 0.2s all ease-in;
+  transition: 0.2s all ease-in; }
+  .social-link .fab {
+    color: antiquewhite;
+    font-size: 1.2rem;
+    -webkit-transition: .3s all ease-in;
+    -o-transition: .3s all ease-in;
+    transition: .3s all ease-in;
+    margin: 5px 10px;
+    padding: 5px; }
+
+.social-link:hover > .fab {
+  color: hotpink;
+  text-shadow: 0 0 1px hotpink; }
+
+fieldset {
+  border: none; }
+
+label:hover {
+  cursor: pointer; }
+
+input[type="radio"] {
+  opacity: 0;
+  position: absolute; }
 
 label {
   font-size: 1.4rem;
@@ -422,12 +401,57 @@ input[type="radio"]:checked + label[for="white"] {
   -webkit-box-shadow: 0 0 40px 1px white;
   box-shadow: 0 0 40px 1px white; }
 
+.flex-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%; }
+
+.flex-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row; }
+
+.light-container {
+  border-radius: 50%;
+  margin: 5px;
+  padding: 5px;
+  display: block;
+  background: #333; }
+
+.desktop {
+  width: 25px;
+  height: 25px; }
+
+.mobile {
+  width: 30px;
+  height: 30px;
+  display: none; }
+
+.flex-container-mobile {
+  display: none; }
+
 footer p {
   font-size: 0.8rem;
   letter-spacing: 2px;
   color: #333; }
 
 @media (max-width: 1150px) {
+  h1 {
+    font-size: 3.2rem;
+    margin: 0;
+    padding: 0; }
   main {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -439,7 +463,8 @@ footer p {
     main .grid-options {
       width: 100%;
       margin: 0;
-      padding: 0; }
+      padding: 0;
+      border: none; }
   .fieldset-flex-container,
   .grid-options-extras {
     -webkit-box-pack: start;
@@ -451,20 +476,32 @@ footer p {
   label,
   button {
     padding: 1px 5px; }
+  label {
+    font-size: 1.2rem; }
   button,
-  ul {
-    margin: 10px 5px; }
+  ul,
+  .fab {
+    margin: 5px 20px; }
   footer {
     text-align: center; } }
 
 @media (max-width: 810px) {
   .remove {
-    display: none; } }
+    display: none; }
+  label {
+    font-size: 1rem; } }
 
 @media (max-width: 700px) {
+  h1 {
+    font-size: 2.6rem; }
+  label {
+    margin: 0; }
   .desktop,
   .flex-container {
     display: none; }
+  .fieldset-flex-container {
+    width: 64%;
+    margin: 0 auto; }
   .flex-container-mobile {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -482,15 +519,33 @@ footer p {
 
 @media (max-width: 520px) {
   .remove-mobile {
-    display: none; } }
+    display: none; }
+  .fieldset-flex-container {
+    width: 78%; } }
 
 @media (max-width: 450px) {
+  h1 {
+    font-size: 2rem; }
+  footer {
+    display: none; }
+  button,
+  ul,
+  .fab {
+    margin: 0 5px; }
   .mobile {
     width: 40px;
     height: 40px; } }
 
 @media (max-width: 400px) {
+  h1 {
+    font-size: 1.4rem;
+    letter-spacing: 5px; }
+  .light-container {
+    padding: 3px;
+    margin: 3px; }
   .remove-mobile-xs {
-    display: none; } }
+    display: none; }
+  .fieldset-flex-container {
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
