--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,7 +2,9 @@
 @import 'partials/global';
 @import 'partials/header';
 @import 'partials/main';
+@import 'partials/main-grid-options';
 @import 'partials/color-form';
 @import 'partials/colors';
+@import 'partials/main-grid';
 @import 'partials/footer';
-@import 'partials/mediaQueries';
+@import 'partials/media-queries';
