--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,7 +1,7 @@
 h1 {
   text-shadow: 0 0 5px blue, 0 0 5px hotpink;
   color: hotpink;
-  font-family: "Sacramento", cursive;
+  font-family: $header-font;
   font-size: 4rem;
   font-style: italic;
   text-align: center;
