--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -13,11 +13,14 @@ $yellow: yellow;
 $red: red;
 $orange: #ff8300;
 $pink: deeppink;
+$hotPink: hotpink;
 $purple: mediumorchid;
 $blue: deepskyblue;
 $green: lawngreen;
 $white: white;
+$antiqueWhite: antiqueWhite;
 $grey: #333;
+
 
 html {
   font-size: 125%;
